# odoo_connect

./: README.md  pyproject.toml
src/: cli_query.py
